tests/errors/syn_cases11.java
public class syn_cases11 {
public static void main(String[] args){
switch(args.length){
case return;
}
}
}